add and write lesson 10

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <script src="peremen-6.js"></script>
+    <!-- <script src="peremen-6.js"></script> -->
     <!-- <script src="let-7.js"></script>
     <script src="conkatanasia-8.js"></script> -->
-    <script></script>
+    <script src="les-10-splice.js"></script>
 </body>
 
 </html>
