add and write lesson 11

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- <script src="peremen-6.js"></script> -->
     <!-- <script src="let-7.js"></script>
     <script src="conkatanasia-8.js"></script> -->
-    <script src="les-10-splice.js"></script>
+    <!-- <script src="les-10-splice.js"></script> -->
+    <script src="les-11-toUpper.js"></script>
 </body>
 
 </html>
