add and write lesson 16

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="let-7.js"></script>
     <script src="conkatanasia-8.js"></script> -->
     <!-- <script src="les-10-splice.js"></script> -->
-    <script src="les-11-toUpper.js"></script>
+    <!-- <script src="les-11-toUpper.js"></script> -->
+    <script src="get-milk-16.js"></script>
 </body>
 
 </html>
