add and write lesson incriment and decriment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="conkatanasia-8.js"></script> -->
     <!-- <script src="les-10-splice.js"></script> -->
     <!-- <script src="les-11-toUpper.js"></script> -->
-    <script src="get-milk-16.js"></script>
+    <!-- <script src="get-milk-16.js"></script> -->
+    <script src="incriment.js"></script>
 </body>
 
 </html>
