--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- <script src="les-10-splice.js"></script> -->
     <!-- <script src="les-11-toUpper.js"></script> -->
     <!-- <script src="get-milk-16.js"></script> -->
-    <script src="incriment.js"></script>
+    <!-- <script src="incriment.js"></script> -->
+    <script src="bmi-calculator.js"></script>
 </body>
 
 </html>
